Add support for blob certification and verification info lookup APIs (#1056)
